--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.mborzenkov.readlaterlist">
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,8 +12,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainList"
-            android:launchMode="singleTop"
             android:label="@string/app_name"
+            android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,12 +24,23 @@
         <activity
             android:name=".EditItem"
             android:label="@string/title_activity_edit_item"
+            android:launchMode="singleTop"
             android:parentActivityName=".MainList"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.mborzenkov.readlaterlist.MainList" />
         </activity>
+        <activity android:name=".ColorPicker"
+            android:label="@string/title_activity_edit_item"
+            android:launchMode="singleTop"
+            android:parentActivityName=".EditItem" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.mborzenkov.readlaterlist.EditItem" />
+        </activity>
     </application>
+
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
 </manifest>
