--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainList"
+            android:name=".Activity.MainList"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar">
@@ -22,22 +22,22 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".EditItem"
+            android:name=".Activity.EditItem"
             android:label="@string/title_activity_edit_item"
             android:launchMode="singleTop"
-            android:parentActivityName=".MainList"
+            android:parentActivityName=".Activity.MainList"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.mborzenkov.readlaterlist.MainList" />
+                android:value="com.example.mborzenkov.readlaterlist.Activity.MainList" />
         </activity>
-        <activity android:name=".ColorPicker"
+        <activity android:name=".Activity.ColorPicker"
             android:label="@string/title_activity_edit_item"
             android:launchMode="singleTop"
-            android:parentActivityName=".EditItem" >
+            android:parentActivityName=".Activity.EditItem" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.mborzenkov.readlaterlist.EditItem" />
+                android:value="com.example.mborzenkov.readlaterlist.Activity.EditItem" />
         </activity>
     </application>
 
