--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Activity.MainList"
+            android:name=".activity.MainList"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar">
@@ -22,23 +22,23 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Activity.EditItem"
+            android:name=".activity.EditItem"
             android:label="@string/title_activity_edit_item"
             android:launchMode="singleTop"
-            android:parentActivityName=".Activity.MainList"
+            android:parentActivityName=".activity.MainList"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.mborzenkov.readlaterlist.Activity.MainList" />
+                android:value="com.example.mborzenkov.readlaterlist.activity.MainList" />
         </activity>
-        <activity android:name=".Activity.ColorPicker"
+        <activity android:name=".activity.ColorPicker"
             android:label="@string/title_activity_colorpicker"
             android:launchMode="singleTop"
-            android:parentActivityName=".Activity.EditItem"
+            android:parentActivityName=".activity.EditItem"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.mborzenkov.readlaterlist.Activity.EditItem" />
+                android:value="com.example.mborzenkov.readlaterlist.activity.EditItem" />
         </activity>
 
         <provider
