--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mborzenkov.readlaterlist">
 
+    <!-- Разрешения -->
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,6 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!-- Activity со списком заметок -->
         <activity
             android:name=".activity.main.MainListActivity"
             android:label="@string/app_name"
@@ -28,6 +31,8 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable_mainlist"/>
         </activity>
+
+        <!-- Activity редактирования заметки -->
         <activity
             android:name=".activity.EditItemActivity"
             android:label="@string/title_activity_edit_item"
@@ -38,6 +43,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.mborzenkov.readlaterlist.activity.main.MainListActivity" />
         </activity>
+
+        <!-- Activity для выбора цветов -->
         <activity android:name=".activity.ColorPickerActivity"
             android:label="@string/title_activity_colorpicker"
             android:launchMode="singleTop"
@@ -48,10 +55,12 @@
                 android:value="com.example.mborzenkov.readlaterlist.activity.EditItemActivity" />
         </activity>
 
+        <!-- ContentProvider для локальной базы данных заметок -->
         <provider
             android:name=".data.ReadLaterContentProvider"
             android:authorities="@string/content_authority"
             android:exported="false"/>
+
     </application>
 
 </manifest>
