--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
 
         <!-- Activity со списком заметок -->
         <activity
-            android:name=".activity.main.MainListActivity"
+            android:name=".activity.main.MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar">
@@ -37,11 +37,11 @@
             android:name=".activity.EditItemActivity"
             android:label="@string/title_activity_edit_item"
             android:launchMode="singleTop"
-            android:parentActivityName=".activity.main.MainListActivity"
+            android:parentActivityName=".activity.main.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.mborzenkov.readlaterlist.activity.main.MainListActivity" />
+                android:value="com.example.mborzenkov.readlaterlist.activity.main.MainActivity" />
         </activity>
 
         <!-- Activity для выбора цветов -->
