--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <!-- Activity со списком заметок -->
+        <!-- Главная Activity, точка входа -->
         <activity
             android:name=".activity.main.MainActivity"
             android:label="@string/app_name"
@@ -30,29 +30,6 @@
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable_mainlist"/>
-        </activity>
-
-        <!-- Activity редактирования заметки -->
-        <activity
-            android:name=".activity.EditItemActivity"
-            android:label="@string/title_activity_edit_item"
-            android:launchMode="singleTop"
-            android:parentActivityName=".activity.main.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.mborzenkov.readlaterlist.activity.main.MainActivity" />
-        </activity>
-
-        <!-- Activity для выбора цветов -->
-        <activity android:name=".activity.ColorPickerActivity"
-            android:label="@string/title_activity_colorpicker"
-            android:launchMode="singleTop"
-            android:parentActivityName=".activity.EditItemActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.mborzenkov.readlaterlist.activity.EditItemActivity" />
         </activity>
 
         <!-- ContentProvider для локальной базы данных заметок -->
