--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,9 +33,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
@@ -48,6 +45,10 @@ dependencies {
     testCompile "org.robolectric:robolectric:3.3.2"
     testCompile "org.mockito:mockito-core:2.7.22"
     testCompile 'com.squareup.okhttp3:mockwebserver:3.8.0'
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    androidTestCompile('com.squareup.okhttp3:mockwebserver:3.8.0')
 }
 
 task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'createDebugCoverageReport']) {
