Added codequality, fixed CheckStyle and Lint

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'jacoco'
+apply from: "${rootProject.projectDir}/codequality/codequality.gradle"
+apply from: "${rootProject.projectDir}/codequality/codequality-android.gradle"
 
 android {
     compileSdkVersion 25
@@ -7,6 +9,7 @@ android {
     defaultConfig {
         applicationId "com.example.mborzenkov.readlaterlist"
         minSdkVersion 16
+        //noinspection OldTargetApi
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
